--- a/src/components/Gameboard.css
+++ b/src/components/Gameboard.css
@@ -1,5 +1,5 @@
 .gameboard{
     border: 2px solid black;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 370.4px);
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
